WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209053
[WebAccessibilityObjectWrapper renderWidgetChildren] does not need to run on main thread.
https://bugs.webkit.org/show_bug.cgi?id=209053
Summary
[WebAccessibilityObjectWrapper renderWidgetChildren] does not need to run on ...
Andres Gonzalez
Reported
2020-03-13 08:14:53 PDT
[WebAccessibilityObjectWrapper renderWidgetChildren] does not need to run on main thread.
Attachments
Patch
(2.31 KB, patch)
2020-03-13 08:21 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-03-13 08:21:30 PDT
Created
attachment 393482
[details]
Patch
Andres Gonzalez
Comment 2
2020-03-13 08:27:55 PDT
<
rdar://problem/60349440
>
WebKit Commit Bot
Comment 3
2020-03-13 09:36:00 PDT
Comment on
attachment 393482
[details]
Patch Clearing flags on attachment: 393482 Committed
r258402
: <
https://trac.webkit.org/changeset/258402
>
WebKit Commit Bot
Comment 4
2020-03-13 09:36:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug