[WebAccessibilityObjectWrapper renderWidgetChildren] does not need to run on main thread. https://bugs.webkit.org/show_bug.cgi?id=209053 <rdar://problem/60349440>

Reviewed by Chris Fleizach.

Since we are caching the platform widget in IsolatedMode (NSView),
there is no need to dispatch renderWidgetChildren to the main thread.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper renderWidgetChildren]):


Canonical link: https://commits.webkit.org/221955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258402 268f45cc-cd09-0410-ab3c-d52691b4dbfc